--- a/src/BorderImages.css
+++ b/src/BorderImages.css
@@ -95,40 +95,8 @@
 
 }
 
-@media(max-height: 950px) and (max-width:600px){
-    .bottom-right-border,
-    .bottom-left-border{
-        @apply  bottom-8 
-    }
-    
-    .bottom-left-border-img{
-        @apply bottom-[2.5rem]
-    }
 
-    .bottom-right-border-img{
-        @apply bottom-[2.2rem]
-    }
 
-    .side-bar-img{
-        @apply top-40
-    }
-}
-
-@media(max-height: 900px) and (max-width:600px){
-    .bottom-right-border,
-    .bottom-left-border{
-        @apply  bottom-24 
-    }
-    
-    .bottom-left-border-img{
-        @apply bottom-[6.5rem]
-    }
-
-    .bottom-right-border-img{
-        @apply bottom-[6.2rem]
-    }
-
-}
 
 @media(max-height: 800px) and (max-width:600px){
     .bottom-left-border,
@@ -167,15 +135,15 @@
 @media (max-height: 700px) and (max-width:600px){
     .bottom-left-border,
     .bottom-right-border{
-        @apply bottom-10
+        @apply bottom-12
     }
 
     .bottom-right-border-img{
-        @apply bottom-11
+        @apply bottom-[3.2rem]
     }
 
     .bottom-left-border-img{
-        @apply bottom-12
+        @apply bottom-[3.4rem]
     }
 }
 
